--- a/learn/learn.html
+++ b/learn/learn.html
@@ -1,12 +1,12 @@
 <style>
 	#courses, #projects { max-width: 1500px }
 	#courses > div {
-		background: rgba(16, 128, 255, 0.8);
+		background: rgba(16, 140, 255, 0.8);
 		transition: background 0.2s;
 		margin: 4px 0;
 	}
 	#projects > div {
-		background: rgba(0,200,4,0.8);
+		background: rgba(16, 212, 96, 0.8);
 		transition: background 0.2s;
 		margin: 4px 0;
 	}
@@ -14,18 +14,13 @@
 		margin-top: 4px;
 		background: rgba(255, 255, 255, 0.75);
 	}
-	.objectives {
-		margin-top: 4px;
-		background: rgba(255, 255, 255, 0.75);
-		border-radius: 3px;
-	}
-	#courses > div:hover { background: rgba(24, 172, 255, 0.8) }
-	#projects > div:hover { background: rgba(64,255,16,0.8) }
+	#courses > div:hover { background: rgba(24, 160, 255, 0.8) }
+	#projects > div:hover { background: rgba(24, 255, 128, 0.8) }
 	#courses a:hover { color: #333 }
 	#projects a:hover { color: #333 }
 	#courses a:active { color: #00f }
 	#projects a:active { color: #00f }
-	@media screen and (min-width: 801px) {
+	@media screen and (min-width: 700px) {
 		#courses > div, #projects > div {
 			width: 49%;
 			margin-right: 1%;
@@ -35,42 +30,43 @@
 <h1 id="heading">Courses</h1>
 <div id="courses" class="row">
 	<div class="pad br">
-		<h2 id="html"><a href="web">Web Development</a></h2>
+		<h2><a href="web">Web Development</a></h2>
 		<img src="web.png" />
-		<h4>Course Description</h4>
-		<div class="desc">Learn the basics of creating a website with HTML, CSS, and Javascript.</div>
-		<h4>Course Objectives</h4>
-		<ul class="objectives">
-			<li>Build a login system</li>
-			<li>Process payments</li>
-			<li>Build powerful web apps</li>
-		</ul>
+		<div class="desc">
+			Learn how to use semantic HTML, styling with Cascading Style Sheets, and interactivity with Javascript. You will:
+			<ul>
+				<li>Build a news site</li>
+				<li>Style your site with CSS</li>
+				<li>Add interactivity with Javascript</li>
+			</ul>
+		</div>
 	</div>
 	<div class="pad br">
-		<h2 id="php"><a href="#">Node.js</a></h2>
+		<h2><a>Server-side Javascript</a></h2>
 		<img src="nodejs.png" />
-		<h4>Course Description</h4>
-		<div class="desc">Learn the basics of the most beautiful and powerful server-side language.</div>
-		<h4>Course Objectives</h4>
-		<ul class="objectives">
-			<li>Build a login system</li>
-			<li>Process payments</li>
-			<li>Build powerful web apps</li>
-		</ul>
+		<div class="desc">
+			Learn how to use Node.js and Mongodb to power a web server. You will:
+			<ul>
+				<li>Build a simple server</li>
+				<li>Let it serve static files and handle errors</li>
+				<li>Build an authentication system</li>
+				<li>Create a mongodb chat app</li>
+			</ul>
+		</div>
 	</div>
 </div>
 <h1 id="heading">Projects</h1>
 <div id="projects" class="row">
-	<div class="pad br">
-		<h2 id="personalsite"><a href="#">Build A Website</a></h2>
+	<div class="desc">
+		<h2><a>Build a Personal Website</a></h2>
 		<img src="http://placekitten.com/1536/512" />
-		<h4>Project desc</h4>
-		<div class="desc">Create a personal website to show your fans!</div>
-		<h4>Project Objectives</h4>
-		<ul class="objectives">
-			<li>Create a cool site with HTML, CSS and JS.</li>
-			<li>Add a donation button with APIs</li>
-			<li>Build a login system for your site</li>
-		</ul>
+		<div class="desc">
+			Create a personal website to show your fans!
+			<ul class="objectives">
+				<li>Create a cool site with HTML, CSS, and JS.</li>
+				<li>Build a login system for your site</li>
+				<li>Add a donation button with the Paypal APIs</li>
+			</ul>
+		</div>
 	</div>
 </div>
