--- a/learn/learn.html
+++ b/learn/learn.html
@@ -16,10 +16,8 @@
 	}
 	#courses > div:hover { background: rgba(24, 160, 255, 0.8) }
 	#projects > div:hover { background: rgba(24, 255, 128, 0.8) }
-	#courses a:hover { color: #333 }
-	#projects a:hover { color: #333 }
-	#courses a:active { color: #00f }
-	#projects a:active { color: #00f }
+	#content a:hover { color: #333 }
+	#content a:active { color: #100 }
 	@media screen and (min-width: 700px) {
 		#courses > div, #projects > div {
 			width: 49%;
