--- a/learn/learn.html
+++ b/learn/learn.html
@@ -28,7 +28,7 @@
 <h1 id="heading">Courses</h1>
 <div id="courses" class="row">
 	<div class="pad br">
-		<h2><a href="web">Web Development</a></h2>
+		<h2><a href="web/">Web Development</a></h2>
 		<img src="web.png" />
 		<div class="desc">
 			Learn how to use semantic HTML, styling with Cascading Style Sheets, and interactivity with Javascript. You will:
