"← Back to course listing" small and grey

--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -1,5 +1,6 @@
 <h1>Web Courses</h1>
-<div id="tree" class="clearfix">
+<a href="../" class="small">← Back to course listing</a>
+<div id="tree" class="clearfix umar">
 	<div id="tree-inner">
 		<div class="html-branch">
 			<div class="course">
