--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -284,12 +284,12 @@
 	<div id="tree-inner">
 		<div class="html-branch">
 			<div class="course">
-				<a href="intro/">Intro to HTML</a>
+				<a href="intro/1/">Intro to HTML</a>
 				<div class="description">Learn what HTML is and how to set up a basic page.</div>
 			</div>
 			<line class="cline"></line>
 			<div class="course">
-				<a href="basic-tags/">Basic elements</a>
+				<a href="basic-tags/1/">Basic elements</a>
 				<div class="description">Create links, paragraphs, and images; emphasize content.</div>
 			</div>
 			<line class="cline"></line>
