fixed CSS in learn

--- a/a/head.html
+++ b/a/head.html
@@ -7,6 +7,7 @@
 		<link rel="icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		<link rel="stylesheet" href="/a/main.css" />
+		$inhead
 		<script src="/a/main.js"></script>
 		<title>$title</title>
 	</head>
