Cleared the signature float on chat

--- a/chat/room.html
+++ b/chat/room.html
@@ -18,6 +18,7 @@
 			div.classList.add('hglt');
 			div.classList.add('umar');
 			div.classList.add('spad');
+			div.classList.add('clearfix');
 			div.textContent = data.body;
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
