Tweaks with learn section

--- a/learn/web/basic-tags/1.html
+++ b/learn/web/basic-tags/1.html
@@ -18,6 +18,7 @@ Basic Tags | Learn | DevDoodle
 	<iframe id="output"></iframe>
 </div>
 <script>
+	var noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
