--- a/learn/web/html-intro/1.html
+++ b/learn/web/html-intro/1.html
@@ -21,6 +21,7 @@ Intro to HTML | Learn | DevDoodle
 	<iframe id="output"></iframe>
 </div>
 <script>
+	var noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
