--- a/learn/web/html-intro/2.html
+++ b/learn/web/html-intro/2.html
@@ -5,9 +5,9 @@ Setting up a page - Using a Doctype | Learn | DevDoodle
 			<h1>Intro to HTML</h1>
 			<h2>Setting up a page - Using a Doctype</h2>
 			<p>The first thing you do when you write an HTML page is define the doctype.</p>
-			<codebl>&lt;!DOCTYPE html></codebl>
+			<code class="blk">&lt;!DOCTYPE html></code>
 			<p>This tells the browser that the page is in HTML5. There are other doctypes, but right now you only need to know the doctype of HTML5. Type it in the code area to continue.</p>
-			<button id="check" onclick="submit()">Submit</button>
+			<button id="check" class="blk" onclick="submit()">Submit</button>
 			<div id="passed" class="clearfix">
 				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../3/">Move on →</a></small></h2>
 			</div>
@@ -22,6 +22,7 @@ Setting up a page - Using a Doctype | Learn | DevDoodle
 	<iframe id="output"></iframe>
 </div>
 <script>
+	var noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
