--- a/learn/web/html-intro/4.html
+++ b/learn/web/html-intro/4.html
@@ -10,11 +10,11 @@ Intro to HTML recap | Learn | DevDoodle
 				<li>HTML is used to provide formatting, layout, and a foundation for other web technologies.</li>
 				<li>You mark up text with tags - a start tag before the content and an end tag after.</li>
 				<li>The basic HTML document consists of a doctype and html, head, and body tags:
-					<codebl>&lt;!DOCTYPE html>
+					<code class="blk">&lt;!DOCTYPE html>
 &lt;html>
 	&lt;head>&lt;/head>
 	&lt;body>&lt;/body>
-&lt;/html></codebl>
+&lt;/html></code>
 				</li>
 			</ul>
 			<bl>Next, we'll learn more about tags, and how to format text.</bl>
@@ -32,6 +32,7 @@ Intro to HTML recap | Learn | DevDoodle
 	<iframe id="output"></iframe>
 </div>
 <script>
+	var noPageOverflow = 520;
 	function run() {
 		document.getElementById('output').srcdoc = document.getElementById('html').value;
 	}
