Fixed broken link

--- a/learn/web/web.html
+++ b/learn/web/web.html
@@ -4,7 +4,7 @@
 	<div id="tree-inner">
 		<div class="html-branch">
 			<div class="course">
-				<a href="intro/">Intro to HTML</a>
+				<a href="html-intro/">Intro to HTML</a>
 				<div class="description">Learn what HTML is and how to set up a basic page.</div>
 			</div>
 			<line class="cline"></line>
