--- a/chat/room.html
+++ b/chat/room.html
@@ -1,8 +1,8 @@
 <div class="row" style="height: calc(100% - 120px)">
 	<div id="chat" class="half scrly hglt pad pre" style="height: 100%; width: 80%;"></div>
 	<div class="half umar" style="width: 18%">
-		<h1>Room Name</h1>
-		<p>Room description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, illo, fuga, iure, expedita neque voluptas rerum blanditiis temporibus ducimus commodi fugit cumque nostrum alias praesentium eveniet impedit pariatur voluptatum. Nesciunt.</p>
+		<h1>$name</h1>
+		<p>$desc</p>
 		<hr />
 		<h2>Users:</h2>
 		<div id="users"></div>
@@ -11,7 +11,7 @@
 <textarea autofocus="" id="ta" class="umar" style="width: 100%; height: 96px;"></textarea><button class="blk" onclick="send()">Post</button>
 <script>
 	var noPageOverflow = 420;
-	var socket = new WebSocket('ws://localhost:8125/chat');
+	var socket = new WebSocket('ws://localhost:8125/chat/$id');
 	var onBottom = true;
 	var timeout = setTimeout(inactive, 10000);
 	var state = 1;
