--- a/learn/learn.html
+++ b/learn/learn.html
@@ -1,5 +1,5 @@
 <h1 id="heading">Courses</h1>
-<div id="courses" class="row">
+<div id="courses" class="row bumar">
 	<div class="half pad br">
 		<h2><a href="web/">Web Development</a></h2>
 		<img src="web.png" />
