--- a/chat/room.html
+++ b/chat/room.html
@@ -8,22 +8,33 @@
 		<div id="users"></div>
 	</div>
 </div>
-<textarea autofocus="" id="ta" class="umar" style="width: 100%; height: 96px;"></textarea><button class="blk" onclick="send()">Post</button>
+<textarea autofocus="" id="ta" class="umar" style="width: 100%; height: 96px;"></textarea><button id="btn" class="blk" onclick="send()">Post</button>
+<p id="ts" hidden="">You are viewing old messages. <a href="/chat/$id">Join room</a>.</p>
 <script>
 	var noPageOverflow = 420;
-	var socket = new WebSocket('ws://localhost:8125/chat/$id');
+	var hash = parseInt(location.hash.substr(1));
+	var socket = new WebSocket('ws://localhost:8125/chat/$id' + (!isNaN(hash) ? '/' + hash : ''));
 	var onBottom = true;
-	var timeout = setTimeout(inactive, 10000);
 	var state = 1;
-	onscroll = function() {
-		onBottom = document.getElementById('chat').scrollTop + document.getElementById('chat').offsetHeight >= document.getElementById('chat').scrollHeight - 2;
+	var skipped;
+	var cont = document.getElementById('chat');
+	var lock = true;
+	var lockTimeout = setTimeout(function() { lock = false }, 1000);
+	cont.onscroll = function() {
+		if (!lock &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 32) {
+			cont.scrollTop = 32;
+			skipped = Math.max(0, skipped - 1);
+			socket.send(JSON.stringify({event: 'req', skip: skipped}));
+		}
+		onBottom = cont.scrollTop + cont.offsetHeight >= cont.scrollHeight - 2;
 	};
 	function send(value) {
 		if (!(value = value || document.getElementById('ta').value)) return;
 		socket.send(JSON.stringify({event: 'post', body: value}));
+		location.hash = '';
 		document.getElementById('ta').value = '';
-		document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
-		onscroll();
+		cont.scrollTop = cont.scrollHeight;
+		cont.onscroll();
 	};
 	function update(nstate) {
 		if (nstate == 1 &amp;&amp; document.getElementById('ta').value) nstate = 2;
@@ -35,6 +46,7 @@
 	function inactive() {
 		update(0);
 	};
+	var timeout = setTimeout(inactive, 10000);
 	function active() {
 		clearTimeout(timeout);
 		timeout = setTimeout(inactive, 10000);
@@ -46,58 +58,83 @@
 	addEventListener('mousemove', active);
 	addEventListener('touchstart', active);
 	addEventListener('scroll', active);
-	document.getElementById('chat').addEventListener('scroll', active);
+	addEventListener('resize', active);
+	cont.addEventListener('scroll', active);
 	socket.onmessage = function(e) {
 		console.log(e.data);
 		try {
 			var data = JSON.parse(e.data);
-			if (data.event == 'init' || data.event == 'add') {
-				var div = document.createElement('div');
-				div.classList.add('hglt');
-				div.classList.add('umar');
-				div.classList.add('spad');
-				div.classList.add('scrl');
-				div.classList.add('clearfix');
-				div.textContent = data.body;
-				var sig = document.createElement('span');
-				sig.classList.add('c-sig');
-				sig.textContent = '-' + data.user + ', ';
-				if (!data.time) data.time = new Date().getTime();
-				sig.appendChild(agot(data.time));
-				div.appendChild(sig);
-				document.getElementById('chat').appendChild(div);
-				if (data.event == 'add') new Audio('/a/beep.mp3').play();
-				if (onBottom) document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
-			} else if (data.event == 'adduser') {
-				var div = document.createElement('div');
-				div.id = 'user-' + (div.textContent = data.name);
-				document.getElementById('users').appendChild(div);
-			} else if (data.event == 'deluser') {
-				var div = document.getElementById('user-' + data.name);
-				div.parentNode.removeChild(div);
-			} else if (data.event == 'statechange') {
-				if (data.state == 0)
-					document.getElementById('user-' + data.user).classList.add('inactive');
-				else
-					document.getElementById('user-' + data.user).classList.remove('inactive');
-				if (data.state == 2)
-					document.getElementById('user-' + data.user).classList.add('writing');
-				else
-					document.getElementById('user-' + data.user).classList.remove('writing');
-			} else if (data.event == 'err') {
-				alert('Error: ' + data.body);
-			} else {
-				throw 'Unsupported event type.';
-			}
 		} catch(err) {
 			console.log(err);
-			//alert('JSON Error.');
+			return alert('JSON Error. Response was: '+e.data);
+		}
+		if (data.event == 'init' || data.event == 'add') {
+			var div = document.createElement('div');
+			div.classList.add('hglt');
+			div.classList.add('umar');
+			div.classList.add('spad');
+			div.classList.add('scrl');
+			div.classList.add('clearfix');
+			div.textContent = data.body;
+			var sig = document.createElement('span');
+			sig.classList.add('c-sig');
+			sig.textContent = '-' + data.user + ', ';
+			var permalink = document.createElement('a');
+			if (!data.time) data.time = new Date().getTime();
+			permalink.appendChild(agot(data.time));
+			permalink.href = '#' + (div.id = data.num);
+			sig.appendChild(permalink);
+			div.appendChild(sig);
+			if (data.before) cont.insertBefore(div, cont.firstChild); else {
+				cont.appendChild(div);
+			}
+			if (data.event == 'add') new Audio('/a/beep.mp3').play();
+			if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
+			cont.onscroll();
+		} else if (data.event == 'adduser') {
+			var div = document.createElement('div');
+			div.id = 'user-' + (div.textContent = data.name);
+			document.getElementById('users').appendChild(div);
+		} else if (data.event == 'deluser') {
+			var div = document.getElementById('user-' + data.name);
+			div.parentNode.removeChild(div);
+		} else if (data.event == 'statechange') {
+			if (data.state == 0)
+				document.getElementById('user-' + data.user).classList.add('inactive');
+			else
+				document.getElementById('user-' + data.user).classList.remove('inactive');
+			if (data.state == 2)
+				document.getElementById('user-' + data.user).classList.add('writing');
+			else
+				document.getElementById('user-' + data.user).classList.remove('writing');
+		} else if (data.event == 'info-skipped') {
+			skipped = data.body;
+			if (data.ts) {
+				document.getElementById('ta').hidden = document.getElementById('btn').hidden = true;
+				document.getElementById('ts').hidden = false;
+			}
+		} else if (data.event == 'info-complete') {
+			complete();
+		} else if (data.event == 'err') {
+			alert('Error: ' + data.body);
+		}
+	};
+	socket.onclose = function() {
+		if (confirm('Connection error. Would you like to reload?')) {
+			location.reload();
 		}
 	};
 	document.getElementById('ta').onkeypress = function(e) {
 		if (e.keyCode == 13 &amp;&amp; !e.shiftKey &amp;&amp; !e.metaKey) {
 			send();
 			e.preventDefault();
+		}
+	};
+	function complete() {
+		if (!isNaN(hash)) {
+			lock = false;
+			location.hash = '';
+			location.hash = '#' + hash;
 		}
 	};
 </script>
