--- a/chat/room.html
+++ b/chat/room.html
@@ -2,7 +2,7 @@
 	<div id="chat" class="half scrly hglt pad pre" style="height: 100%; width: 80%;"></div>
 	<div class="half umar" style="width: 18%">
 		<div id="roominfo">
-			<h1 id="name">$name <small><a id="edit">Edit</a></small></h1>
+			<h1><span id="name">$name</span> <small><a id="edit">Edit</a></small></h1>
 			<p id="desc">$desc</p>
 		</div>
 		<form id="editform" hidden="">
