Created blank programs page, submenu

--- a/a/head.html
+++ b/a/head.html
@@ -27,10 +27,17 @@
 				</a>
 				<a href="/learn/">Learn</a>
 				<a href="/dev/">Create</a>
-				<a href="/qa/">Q&amp;A</a>
+				<nav>
+					<a href="/dev/">Home</a>
+					<a href="/dev/list/">List</a>
+					<a href="/dev/new">New</a>
+					<a href="/dev/docs">Docs</a>
+				</nav>
+				<a href="/qa/">Ask</a>
 				<a href="/chat/">Chat</a>
 				<a href="/login/">Login</a>
 				<a href="/mod/">Mod</a>
 				<form action="/search/" class="ib"><input type="text" name="q" value="$search" style="line-height: 16px;" placeholder="Search this site" /></form>
+				<div></div>
 			</nav>
 			<div id="content">
