Fixed bugs from last commit

--- a/a/head.html
+++ b/a/head.html
@@ -24,6 +24,7 @@
 			<nav id="nav">
 				<a id="logo" href="/" style="background: rgba(255, 255, 255, 0.9)">
 					<img src="/a/logo2.png" alt="DevDoodle" />
+					<div></div>
 				</a>
 				<a href="/learn/">Learn</a>
 				<a href="/dev/">Create</a>
