--- a/learn/web/html-intro/2.html
+++ b/learn/web/html-intro/2.html
@@ -1,4 +1,4 @@
-Setting up a page - Using a Doctype | Learn | DevDoodle
+Setting up a page - Using a Doctype
 <div class="row">
 	<div id="text">
 		<div id="text-inner">
