--- a/learn/web/html-intro/3.html
+++ b/learn/web/html-intro/3.html
@@ -1,4 +1,4 @@
-Setting up a page - Tags | Learn | DevDoodle
+Setting up a page - Tags
 <div class="row">
 	<div id="text">
 		<div id="text-inner">
