Improved active algorithm, added blank pages

--- a/a/head.html
+++ b/a/head.html
@@ -31,8 +31,8 @@
 				<nav>
 					<a href="/dev/">Home</a>
 					<a href="/dev/list/">List</a>
-					<a href="/dev/new">New</a>
-					<a href="/dev/docs">Docs</a>
+					<a href="/dev/new/">New</a>
+					<a href="/dev/docs/">Docs</a>
 				</nav>
 				<a href="/qa/">Ask</a>
 				<a href="/chat/">Chat</a>
