--- a/dev/new/new.html
+++ b/dev/new/new.html
@@ -1,23 +1,22 @@
 <h1>New Program</h1>
 <div id="ides" class="row bumar">
-	<div class="half pad br">
-		<h2><a href="canvas/">Canvas</a></h2>
+	<a href="canvas" class="half pad br">
+		<h2>Canvas</h2>
 		<img src="canvas.png" />
-	</div>
-	<div class="half pad br">
-		<h2><a href="html/">HTML</a></h2>
+	</a>
+	<a href="html" class="half pad br">
+		<h2>HTML</h2>
 		<img src="html.png" />
-	</div>
+	</a>
 </div>
 <style>
 	#ides { max-width: 1800px }
-	#ides > div {
+	#ides a {
 		background: rgba(16, 140, 255, 0.8);
 		transition: background 0.2s;
+		color: #000;
 	}
-	#ides > div:hover { background: rgba(24, 160, 255, 0.8) }
-	#content a:hover { color: #333 }
-	#content a:active { color: #100 }
+	#ides a:hover { background: rgba(24, 160, 255, 0.8) }
 	#ides img {
 		background: #000;
 		padding: 4px;
