--- a/dev/new/new.html
+++ b/dev/new/new.html
@@ -15,6 +15,7 @@
 		background: rgba(16, 140, 255, 0.8);
 		transition: background 0.2s;
 		color: #000;
+		display: block;
 	}
 	#ides a:hover { background: rgba(24, 160, 255, 0.8) }
 	#ides img {
